# relwave-app

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  FEATURES.md  README.md  TASKS.md  package.json  pnpm-lock.yaml  readme.md  vite.config.ts
.github/workflows/: release.yml  test.yml
bridge/: jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
bridge/__tests__/: connectionBuilder.test.ts  databaseService.test.ts  dbStore.test.ts  importProject.test.ts
bridge/__tests__/connectors/: mariadb.cache.test.ts  mariadb.test.ts  mysql.cache.test.ts  mysql.test.ts  postgres.test.ts  sqlite.test.ts
bridge/src/: index.ts  jsonRpcHandler.ts
bridge/src/ai/: ai.types.ts
bridge/src/connectors/: mariadb.ts  mysql.ts  postgres.ts  (+1 more)
bridge/test/: client.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: process.rs
src-tauri/src/services/: analytics.rs
src/components/: ChartVisualization.tsx  DashboardContent.tsx  DatabaseCard.tsx  QueryTester.tsx  StatsOverview.tsx  TauriGuard.tsx  header.tsx  mode-toggle.tsx
src/hooks/: useGitWorkflow.ts
src/lib/: parseConnectionUrl.ts  themes.ts  utils.ts
src/pages/: DatabaseDetails.tsx  ERDiagram.tsx  Index.tsx  NotFound.tsx  Projects.tsx  QueryBuilder.tsx  SQLWorkspace.tsx  SchemaExplorer.tsx  Settings.tsx
src/services/: analytics.ts  bridgeApi.ts  bridgeClient.ts
src/types/: database.ts  gitWorkflow.ts  project.ts
(+142 files in other folders)
