[package]
name = "relwave"
version = "0.9.0-rc-5"
description = "A powerful, cross-platform desktop application for database management with native Git version control."
authors = ["yashh56"]
edition = "2021"

[lib]
name = "relwave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tauri-plugin-aptabase = "1.0.0"

[[bin]]
name = "relwave"
path = "src/main.rs"
